// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots match snapshot default 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  lg={6}
  sm={12}
>
  <WithStyles(ForwardRef(Card))
    className="makeStyles-card-1"
  >
    <WithStyles(ForwardRef(CardActionArea))
      className="makeStyles-ctaActionArea-5"
      onClick={[MockFunction]}
    >
      <WithStyles(ForwardRef(CardHeader))
        avatar={
          <ForwardRef(WithStyles)
            className="makeStyles-avatar-3"
          >
            <div />
          </ForwardRef(WithStyles)>
        }
        className="makeStyles-header-4"
        title="Title"
        titleTypographyProps={
          Object {
            "variant": "h6",
          }
        }
      />
      <WithStyles(ForwardRef(CardContent))
        className="makeStyles-cardContentText-6"
      >
        <WithStyles(ForwardRef(Typography))
          color="textSecondary"
          component="p"
          variant="body1"
        >
          Some string body
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(CardContent))>
    </WithStyles(ForwardRef(CardActionArea))>
  </WithStyles(ForwardRef(Card))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`snapshots match snapshot with body element 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  lg={6}
  sm={12}
>
  <WithStyles(ForwardRef(Card))
    className="makeStyles-card-1"
  >
    <WithStyles(ForwardRef(CardActionArea))
      className="makeStyles-ctaActionArea-5"
      onClick={[MockFunction]}
    >
      <WithStyles(ForwardRef(CardHeader))
        avatar={
          <ForwardRef(WithStyles)
            className="makeStyles-avatar-3"
          >
            <div />
          </ForwardRef(WithStyles)>
        }
        className="makeStyles-header-4"
        title="Title"
        titleTypographyProps={
          Object {
            "variant": "h6",
          }
        }
      />
      <WithStyles(ForwardRef(CardContent))
        className="makeStyles-cardContentText-6"
      >
        <WithStyles(ForwardRef(Typography))
          color="textSecondary"
          component="p"
          variant="body1"
        >
          foo
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(CardContent))>
    </WithStyles(ForwardRef(CardActionArea))>
  </WithStyles(ForwardRef(Card))>
</WithStyles(ForwardRef(Grid))>
`;
